Update_exceptions (#1)
