# client_axios/model/method-argument-not-valid-exception-dto.ts
@@ -1,0 +1,66 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Swagger for MyHome
+ * This is openapi specification for MyHome application.
+ *
+ * The version of the OpenAPI document: 0.2.0-SNAPSHOT
+ * Contact: jeanbaptiste.wittner@outlook.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+
+/**
+ * 
+ * @export
+ * @interface MethodArgumentNotValidExceptionDTO
+ */
+export interface MethodArgumentNotValidExceptionDTO {
+    /**
+     * 
+     * @type {number}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'status': number;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'details': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'exception': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'message': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'timestamp': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'field': string;
+    /**
+     * 
+     * @type {string}
+     * @memberof MethodArgumentNotValidExceptionDTO
+     */
+    'objectName': string;
+}
+
