# server_springboot/src/main/java/fr/myhome/openapi/model/LoginParameter.java
@@ -1,131 +1,0 @@
-package fr.myhome.openapi.model;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.time.OffsetDateTime;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import javax.annotation.Generated;
-
-/**
- * LoginParameter
- */
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
-public class LoginParameter   {
-
-  @JsonProperty("username")
-  private String username;
-
-  @JsonProperty("password")
-  private String password;
-
-  @JsonProperty("rememberMe")
-  private Boolean rememberMe;
-
-  public LoginParameter username(String username) {
-    this.username = username;
-    return this;
-  }
-
-  /**
-   * Get username
-   * @return username
-  */
-  @NotNull 
-  @Schema(name = "username", required = true)
-  public String getUsername() {
-    return username;
-  }
-
-  public void setUsername(String username) {
-    this.username = username;
-  }
-
-  public LoginParameter password(String password) {
-    this.password = password;
-    return this;
-  }
-
-  /**
-   * Get password
-   * @return password
-  */
-  @NotNull 
-  @Schema(name = "password", required = true)
-  public String getPassword() {
-    return password;
-  }
-
-  public void setPassword(String password) {
-    this.password = password;
-  }
-
-  public LoginParameter rememberMe(Boolean rememberMe) {
-    this.rememberMe = rememberMe;
-    return this;
-  }
-
-  /**
-   * Get rememberMe
-   * @return rememberMe
-  */
-  @NotNull 
-  @Schema(name = "rememberMe", required = true)
-  public Boolean getRememberMe() {
-    return rememberMe;
-  }
-
-  public void setRememberMe(Boolean rememberMe) {
-    this.rememberMe = rememberMe;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    LoginParameter loginParameter = (LoginParameter) o;
-    return Objects.equals(this.username, loginParameter.username) &&
-        Objects.equals(this.password, loginParameter.password) &&
-        Objects.equals(this.rememberMe, loginParameter.rememberMe);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(username, password, rememberMe);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class LoginParameter {\n");
-    sb.append("    username: ").append(toIndentedString(username)).append("\n");
-    sb.append("    password: ").append(toIndentedString(password)).append("\n");
-    sb.append("    rememberMe: ").append(toIndentedString(rememberMe)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
